[tool.poetry]
name = "mock"
version = "0.1.0"
description = ""
authors = ["AsifAziee <mohammed.asif@edstem.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pytest = "^7.1.2"
flasgger = "^0.9.5"
flask-swagger = "^0.2.14"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
